# backend-in

./: .env.template  .gitignore  AGENT_MARKETPLACE.md  CHANGELOG.md  DUAL_MODE_CONVERSATIONS.md  Dockerfile  Dockerfile.dev  Dockerfile.test  FLEXIBLE_CONVERSATION_SYSTEM.md  PRODUCTION_CHECKLIST.md  README.md  README_ENHANCED.md  RESTRUCTURE_SUMMARY.md  USER_INSTRUCTIONS.md  VOICE_AGENT_CONFIGURATION.md  agent.py  analyze_dependencies.py  bot_dual_mode.py  bot_flexible_conversation.py  bot_websocket_server.py  config.py  database.py  docker-compose.yml  livekit_agent_entrypoint.py  main.py  migrate_database.py  pyproject.toml  pytest.ini  reorganize_structure.sh  requirements-test.txt  run_tests.py  scoreexl_voice.sqlite  server.py  server_enhanced.py  start_and_test.sh  start_server.sh  subshur.py  test_flexible_conversation.py  test_live_conversation_modes.py  test_marketplace.py  (+7 more)
api/: agents.py  auth.py
app/: config.py  main.py  pipeline.py  websocket_server.py
bot/: fast_api.py  flexible_conversation.py  pipeline_factory.py
core/: service_pool.py
docs/: MULTI_AGENT_CONVERSATIONS.md
documentations/: AGENT_DISPATCH.md  AUTHENTICATION.md  BUILDING_VOICE_AGENTS.md  EXTERNAL_DATA_AND_RAG.md  GOOGLE_CLOUD_TTS_INTEGRATION.md  JOB_LIFECYCLE.md  LIVEKIT_AGENTS.md  LLM_INTEGRATIONS.md  PIPELINE_NODES_AND_HOOKS.md  SENDING_TEXT.md  SERVER_APIS.md  STT_INTEGRATION.md  TOOL_DEFINITION_AND_USE.md  TURN_DETECTION_AND_INTERRUPTIONS.md  WORKFLOWS.md
examples/: transcriber.py  transcription_node.py
helpful_docs/: Ending_A_Pipeline.md  GOOGLE_STT.md  GOOGLE_TTS.md  OPENAI_LLM.md  Parallel_Pipeline.md  PipelineParams.md  PipelineTask.md  Pipeline_Heartbeats.md  Pipeline_Idle_Detection.md  SmallWebRTCTransport.md  Websocket_Server.md
implementations/: google_stt_impl.py  google_tts_impl.py  openai_llm_impl.py
middleware/: __init__.py  rate_limiting.py
models/: __init__.py  agent.py  conversation_history.py  session.py  user.py
plugins/google/: symbolic-heaven-459106-v1-41c04c3a0e5e.json
plugins/whispercpp/: stt.py
routers/: __init__.py  agents.py  auth.py  sessions.py  websocket.py
schemas/: agent.py  session.py
scripts/: dev.sh  init-db.sql
services/: __init__.py  auth_service.py  livekit_service.py  session_manager.py
static/: index.html
static/js/: client.js
tests/: README.md  __init__.py  conftest.py  test_api_comprehensive.py  test_pytest_integration.py
tests/integration/: README_live_conversation_tests.md  test_flexible_conversation.py  test_live_conversation_modes.py  test_multi_agent_simple.py  test_pipecat_client.py  test_server_endpoints.py  test_websocket_basic.py
tests/unit/: test_pipeline_factory.py  test_service_pool.py  test_transport_base.py  test_transport_factory.py
transports/: __init__.py  base.py  factory.py
transports/webrtc/: __init__.py  manager.py
transports/websocket/: __init__.py  manager.py  manager_old.py
